...
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.helper.groupa.studenthelper.GBGrade">

    <TextView
        android:id="@+id/grade_title_class"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_purple"
        android:drawablePadding="15dp"
        android:drawableStart="@android:drawable/ic_menu_revert"/>

    <TextView
        android:id="@+id/grade_title_syllabus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grade_title_class"
        android:layout_marginTop="15.0dp"
        android:background="@android:color/holo_orange_light"
        android:drawablePadding="15dp"
...
