<resources>
    <string name="app_name">Student Helper</string>

    <!--home page string resources-->
    <string name="action_settings">Settings</string>
    <string name="agenda">Agenda</string>
    <string name="schedule">schedule</string>
    <string name="gpaCalc">GPA Calculator</string>
...
    <string name="title_activity_class_syllabus">Class Syllabus</string>
    <string name="title_activity_class_grade">Class Grade</string>
    <string name="title_activity_schedule_details">ScheduleDetails</string>
    <string name="title_activity_edit_semester_gpa">EditSemesterGPAActivity</string>
    <string name="title_activity_edit_course_semester_gpa">EditCourseSemesterGPAActivity</string>

    <string name = "gb_title_activity_gb_class">Gradebook: Classes</string>
    <string name = "gb_title_activity_gb_syllabus">Gradebook: Syllabus</string>
    <string name = "gb_title_activity_gb_grade">Gradebook: Grades</string>

    <string name = "gb_activity_gb_class_button">ADD CLASS</string>
    <string name = "gb_activity_gb_syllabus_button">ADD TO SYLLABUS</string>
    <string name = "gb_activity_gb_grade_button">ADD GRADE</string>
...
