...
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.helper.groupa.studenthelper.GBClass">

    <TextView
        android:id="@+id/gb_title_home"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:drawablePadding="15dp"
        android:drawableStart="@android:drawable/ic_menu_revert"
        android:text="@string/gb_home_screen"
...
